--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,30 @@
+body{
+    margin: 0;
+}
+
 .grid_wrapper {
 	display: grid;
-	grid-template-columns: 15% 70% 15%;
+    grid-template-columns: 20% 60% 20%;
+}
+
+#content_grid {
+    height: 90vh;
+    position:  absolute;
+    overflow: scroll;
+    top: 10vh;
 }
 
 #titleBar{
     background-color: rgb(49, 114, 245)
-    /* background-color:  rgb(255, 153, 51); */
+    /* background-color:  rgb(255, 153, 51); */;
+    position:  fixed;
+    height: 10%;
+    width:  100vw;
+    z-index:  10;
+}
+
+.bar_scrolled{
+    box-shadow: 0px 4px 7px 3px #BABABA;
 }
 
 #titleBar > h1{
@@ -15,14 +34,19 @@
 
 .grid_one {
     grid-column: 1;
-    border: 2px solid red;
-}
-.grid_two {
-    grid-column: 2;
-    border: 2px solid blue;
 }
 .grid_three {
     grid-column: 3;
-    border: 2px solid magenta;
 }
 
+.grid_one, .grid_three {
+    background-color: rgba(228, 228, 228, 0.65);
+}
+
+.grid_two {
+    grid-column: 2;
+    background-color: #FFFFFF;
+    padding:  20px;
+    border-left: 2px solid #cecece;
+    border-right: 2px solid #cecece;
+}
