--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,95 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
 .grid_wrapper {
-	display: grid;
-    grid-template-columns: 20% 60% 20%;
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
 }
 
 #content_grid {
-    height: 90vh;
-    position:  absolute;
-    overflow: scroll;
-    top: 10vh;
-    width: 100%;
+  height: 90vh;
+  position: absolute;
+  overflow: scroll;
+  top: 10vh;
+  width: 100%;
 }
 
-#titleBar{
-    background-color: rgb(49, 114, 245)
-    /* background-color:  rgb(255, 153, 51); */;
-    position:  fixed;
-    height: 10%;
-    width:  100vw;
-    z-index:  10;
+#titleBar {
+  background-color: rgb(49, 114, 245);
+  position: fixed;
+  height: 10%;
+  width: 100vw;
+  z-index: 10;
 }
 
-.bar_scrolled{
-    box-shadow: 0px 4px 7px 3px #BABABA;
+.bar_scrolled {
+  box-shadow: 0px 4px 7px 3px #bababa;
 }
 
-#titleBar > h1{
-    grid-column: 2;
-    text-align: center;
+#titleBar > h1 {
+  grid-column: 2;
+  text-align: center;
 }
 
 .grid_one {
-    grid-column: 1;
+  grid-column: 1;
 }
 .grid_three {
-    grid-column: 3;
+  grid-column: 3;
 }
 
-.grid_one, .grid_three {
-    background-color: rgba(228, 228, 228, 0.65);
+.grid_one,
+.grid_three {
+  background-color: rgba(228, 228, 228, 0.65);
 }
 
 .grid_two {
-    grid-column: 2;
-    background-color: #FFFFFF;
-    padding:  20px;
-    border-left: 2px solid #cecece;
-    border-right: 2px solid #cecece;
+  grid-column: 2;
+  background-color: #ffffff;
+  padding: 20px;
+  border-left: 2px solid #cecece;
+  border-right: 2px solid #cecece;
+}
+nav {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  height: 50%;
+}
+
+nav ul {
+  padding: 0px;
+  margin: 0px;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+nav li {
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+  padding: 0 12px;
+  margin: 0 5px;
+  background-color: #5f91f7;
+  border-top: 1px solid #1351cc;
+  border-left: 1px solid #1351cc;
+  border-right: 1px solid #1351cc;
+}
+
+nav li:hover {
+  background-color: #adc7fb;
+}
+
+.currentPage {
+  background-color: #ff9800;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  display: inline-flex;
 }
