Adds sorting functionnalities for diseases

--- a/src/assets/css/diseases.css
+++ b/src/assets/css/diseases.css
@@ -11,6 +11,11 @@ td, th
     padding: 3px 0px 3px 5px;
 }
 
+th
+{
+    position: relative;
+}
+
 thead{
     background-color: #3172f5b0;
     color: #FFFFFF;
@@ -22,4 +27,23 @@ tbody tr:nth-child(even) {
 
 tbody tr:nth-child(odd) {
     background-color: #ff980029;
+}
+
+.tableHeaderContent
+{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: baseline;
+}
+
+.sortControls
+{
+    display: inline-block;
+    text-align: right;
+    padding-right: 5%;
+}
+
+.sortButton img
+{
+    height: 18px;
 }
