Impression au point

--- a/src/assets/css/impression.css
+++ b/src/assets/css/impression.css
@@ -1,4 +1,8 @@
 body {
-    background: white;
+    background:white;
+    font-family:Serif;
     font-size:0.85em;
 }
+
+#navigation {display: none;}
+
